--- a/core/spring/pom.xml
+++ b/core/spring/pom.xml
@@ -148,4 +148,44 @@ under the License.
       </resource>
     </resources>
   </build>
+   <profiles>
+    <profile>
+      <id>pit</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>1.5.1</version>
+            <dependencies>
+              <dependency>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-junit5-plugin</artifactId>
+                <version>0.12</version>
+              </dependency>
+            </dependencies>
+            <configuration>
+              <maxMutationsPerClass>30</maxMutationsPerClass>
+              <targetClasses>
+                <param>org.apache.syncope.core.spring.security.Encryptor</param>
+              </targetClasses>
+              <targetTests>
+                <param>org.apache.syncope.core.spring.security.MyEncryptorDecodeTest</param>
+                <param>org.apache.syncope.core.spring.security.MyEncryptorVerifyTest</param>
+              </targetTests>
+
+              <avoidCallsTo>
+                <avoidCallsTo>java.util.logging</avoidCallsTo>
+                <avoidCallsTo>org.apache.log4j</avoidCallsTo>
+                <avoidCallsTo>org.slf4j</avoidCallsTo>
+                <avoidCallsTo>org.apache.commons.logging</avoidCallsTo>
+              </avoidCallsTo>
+
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+  
 </project>
